--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,3 @@
-[build];
-functions = "netlify/functions/";
+# This file tells Netlify where to find your serverless function.
+[build]
+  functions = "netlify/functions/"
